tests/invalid_ast_samples/c2d9be1ca1ecf5bd343ebc53651fe24a32d50eb52bb8950f041fc20169d33460.py
from ast import Expr
from ast import Module
from ast import Name
from ast import Starred
from ast import Store

tree = Module(
    body=[Expr(value=Starred(value=Name(id="name_1", ctx=Store()), ctx=Store()))],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# *name_1
#
#
# Error:
#     SyntaxError("can't use starred expression here", ('<file>', 1, 1, None, 1, 8))
